[BE] Refactored config + setup k8 cluster
